# deepcontext

./: .cursorignore  .gitignore  Dockerfile  README.md  context7.json  docker-compose.yml  main.py  pyproject.toml
deepcontext/: __init__.py  api.py  chunker.py  cli.py  fetcher.py  mcp_server.py  models.py  queue.py  store.py
