[project]
name = "deepcontext"
version = "0.1.0"
description = "Semantic chunking service for documents, GitHub repos, and webpages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[semantic]>=1.0.0",
    "fastembed>=0.4.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.27.0",
    "markdownify>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "gitingest>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.0.0",
]

[project.scripts]
deepcontext = "deepcontext.cli:main"
deepcontext-mcp = "deepcontext.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
